--- a/src/CFPService.Api/appsettings.json
+++ b/src/CFPService.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DataAccessOptions":
+  {
+    "ConnectionString": "User ID=postgres;Password=123456;Host=localhost;Port=15432;Database=postgres"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
