--- a/src/CFPService.Domain.DependencyInjection/CFPService.Domain.DependencyInjection.csproj
+++ b/src/CFPService.Domain.DependencyInjection/CFPService.Domain.DependencyInjection.csproj
@@ -6,4 +6,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CFPService.Domain\CFPService.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CFPService.Domain\CFPService.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
