--- a/src/CFPService.Domain/CFPService.Domain.csproj
+++ b/src/CFPService.Domain/CFPService.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services\Interfaces\" />
+      <Folder Include="Models\" />
     </ItemGroup>
 
 </Project>
