add option to migration bd

--- a/src/CFPService.Api/appsettings.json
+++ b/src/CFPService.Api/appsettings.json
@@ -1,7 +1,10 @@
 {
   "DataAccessOptions":
   {
-    "ConnectionString": "User ID=postgres;Password=123456;Host=localhost;Port=15432;Database=postgres"
+    "ConnectionString": "User ID=postgres;Password=123456;Host=localhost;Port=15432;Database=postgres",
+    "ApplicationNameMaxSize": 100,
+    "ApplicationDescriptionMaxSize": 300,
+    "ApplicationOutlineMaxSize": 1000
   },
 
   "Logging": {
