--- a/src/CFPService.Domain.DependencyInjection/CFPService.Domain.DependencyInjection.csproj
+++ b/src/CFPService.Domain.DependencyInjection/CFPService.Domain.DependencyInjection.csproj
@@ -8,10 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\CFPService.Domain\CFPService.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>      
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     </ItemGroup>
 
 </Project>
